@@ -1,3 +1,4 @@
-require File.dirname(__FILE__) + '/lib/controller_mixin.rb'
-require File.dirname(__FILE__) + '/lib/rspec_on_rails.rb'
-
+if RAILS_ENV == 'test'
+  require File.dirname(__FILE__) + '/lib/controller_mixin.rb'
+  require File.dirname(__FILE__) + '/lib/rspec_on_rails.rb'
+end
